--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -68,7 +68,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "my-neighborhood-portal:build"
+            "browserTarget": "my-neighborhood-portal:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
