--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "rxjs": "~6.6.0",
+    "striptags": "^3.1.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
