--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "ngx-alias": "^1.1.0",
     "rxjs": "~6.6.0",
     "striptags": "^3.1.1",
     "tslib": "^2.0.0",
